--- a/webssh/templates/index.html
+++ b/webssh/templates/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>WebSSH Console</title>
+  <title>Mimo-Ryotaku</title>
   <link href="static/img/favicon-32.png" rel="icon" type="image/png">
   <link href="static/css/bootstrap.min.css" rel="stylesheet" type="text/css" />
   <link href="static/css/xterm.min.css" rel="stylesheet" type="text/css" />
@@ -451,7 +451,7 @@
       });
     }
   </script>
-  <a href="https://github.com/cmliu/webssh" target="_blank" class="github-corner" aria-label="View source on Github">
+  <a href="https://github.com/Ryotakus/Mimo-Ryotaku" target="_blank" class="github-corner" aria-label="View source on Github">
     <svg viewBox="0 0 250 250" aria-hidden="true">
       <path d="M0,0 L115,115 L130,115 L142,142 L250,250 L250,0 Z"></path>
       <path
@@ -466,7 +466,7 @@
 
   <div class="main-container">
     <div class="form-container" style="display: none">
-      <h1 class="page-title">WebSSH Console</h1>
+      <h1 class="page-title">Mimo Ryotaku</h1>
 
       <form id="connect" action="" method="post" enctype="multipart/form-data" {% if debug %} novalidate{% end %}>
         <div class="form-section">
